# git-identity

./: .gitignore  README.md  pyproject.toml
git_identity/: __init__.py
tests/: test_git_identity.py
